--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
             <p>Feel free to enter your details below and you will get your akan name.</p>
         </header>
         <h2>Fill in details </h2>
+        <form class="form" id="form">
+            <div class="form-control">
+                <label class="label">Year</label>
+                <input type="number" placeholder="year" id="YearField">
+                <i class="fas fa-check-circle"></i>
+                <i class="fas fa-exclamation-circle"></i>
+                <small>Error message</small>
+
+            </div>
+
+        </form>
     </div>
 </body>
 </html>
