Add month and date field

--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
         <form class="form" id="form">
             <div class="form-control">
                 <label class="label">Year</label>
-                <input type="number" placeholder="year" id="YearField">
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error message</small>
-
+                <input type="number" placeholder="year" id="YearField" required>
             </div>
+            <div class="form-control">
+                <label class="label">Month</label>
+                <input type="number" placeholder="year" id="MOnthField" required>
+            </div>
+            <div class="form-control">
+                <label class="label">Date</label>
+                <input type="number" placeholder="Date" id="DateField" required>
+            </div>
+
+    
+
+
 
         </form>
     </div>
