Add submit button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <input type="number" placeholder="Date" id="DateField" required>
             </div>
 
+            <button>submit</button>
+
     
 
 
