Add remove suggestions

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                     <h2>Fill in your details</h2>
                 <div class="form-control">
                     <label class="label">Year</label>
-                    <input type="text" placeholder="e.g 1988" id="YearField" required>
+                    <input type="text" placeholder="e.g 1988" id="YearField"autocomplete="off" required>
                 </div>
                 <div class="form-control">
                     <label class="label">Month</label>
-                    <input type="text" placeholder="month" id="MonthField" required>
+                    <input type="text" placeholder="month" id="MonthField"autocomplete="off" required>
                 </div>
                 <div class="form-control">
                     <label class="label">Date</label>
-                    <input type="text" placeholder="Date" id="DateField" required>
+                    <input type="text" placeholder="Date" id="DateField"autocomplete="off" required>
                 </div>
                 <select class="form-control" name="Gender" id="gender" required>
                     <option value="Male">Male</option>
-                    <option value="Female">Female</option>
+                    <option value="Female">Female</option> 
                 </select>
     
                 <button onclick="validateform()">submit</button>
